force-app/main/default/objects/Flight__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <label>Arrival</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>