force-app/main/default/objects/Flight__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahmedabad - AMD</fullName>
            </value>
            <value>
                <fullName>Bengaluru - BLR</fullName>
            </value>
            <value>
                <fullName>Bhopal - BHO</fullName>
            </value>
            <value>
                <fullName>Delhi - DEL</fullName>
            </value>
            <value>
                <fullName>Goa - GOI</fullName>
            </value>
            <value>
                <fullName>Hyderabad - HYD</fullName>
            </value>
            <value>
                <fullName>Kolkata - CCU</fullName>
            </value>
            <value>
                <fullName>Mumbai - BOM</fullName>
            </value>
            <value>
                <fullName>Nagpur - NAG</fullName>
            </value>
            <value>
                <fullName>Pune - PNQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>