force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Departure__c</columns>
    <columns>Destination__c</columns>
    <columns>Arrival__c</columns>
    <columns>Passenger_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>